// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio renders checked state 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="om-react-ui-radio-beta"
      >
        <div
          class="om-react-ui-radio-beta-box-wrapper"
        >
          <div
            class="om-react-ui-radio-beta-box p-radiobutton p-component p-highlight"
            data-p-checked="true"
            data-pc-name="radiobutton"
            data-pc-section="root"
          >
            <input
              checked=""
              class="p-radiobutton-input"
              data-pc-section="input"
              type="radio"
            />
            <div
              class="p-radiobutton-box"
              data-pc-section="box"
            >
              <div
                class="p-radiobutton-icon"
                data-pc-section="icon"
              />
            </div>
          </div>
        </div>
        <div
          class="om-react-ui-radio-beta-content"
        >
          <span
            class="om-react-ui-radio-beta-label"
          >
            Checked radio
          </span>
        </div>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="om-react-ui-radio-beta"
    >
      <div
        class="om-react-ui-radio-beta-box-wrapper"
      >
        <div
          class="om-react-ui-radio-beta-box p-radiobutton p-component p-highlight"
          data-p-checked="true"
          data-pc-name="radiobutton"
          data-pc-section="root"
        >
          <input
            checked=""
            class="p-radiobutton-input"
            data-pc-section="input"
            type="radio"
          />
          <div
            class="p-radiobutton-box"
            data-pc-section="box"
          >
            <div
              class="p-radiobutton-icon"
              data-pc-section="icon"
            />
          </div>
        </div>
      </div>
      <div
        class="om-react-ui-radio-beta-content"
      >
        <span
          class="om-react-ui-radio-beta-label"
        >
          Checked radio
        </span>
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Radio renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="om-react-ui-radio-beta"
      >
        <div
          class="om-react-ui-radio-beta-box-wrapper"
        >
          <div
            class="om-react-ui-radio-beta-box p-radiobutton p-component"
            data-p-checked="false"
            data-pc-name="radiobutton"
            data-pc-section="root"
          >
            <input
              class="p-radiobutton-input"
              data-pc-section="input"
              type="radio"
            />
            <div
              class="p-radiobutton-box"
              data-pc-section="box"
            >
              <div
                class="p-radiobutton-icon"
                data-pc-section="icon"
              />
            </div>
          </div>
        </div>
        <div
          class="om-react-ui-radio-beta-content"
        >
          <span
            class="om-react-ui-radio-beta-label"
          >
            Test radio
          </span>
        </div>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="om-react-ui-radio-beta"
    >
      <div
        class="om-react-ui-radio-beta-box-wrapper"
      >
        <div
          class="om-react-ui-radio-beta-box p-radiobutton p-component"
          data-p-checked="false"
          data-pc-name="radiobutton"
          data-pc-section="root"
        >
          <input
            class="p-radiobutton-input"
            data-pc-section="input"
            type="radio"
          />
          <div
            class="p-radiobutton-box"
            data-pc-section="box"
          >
            <div
              class="p-radiobutton-icon"
              data-pc-section="icon"
            />
          </div>
        </div>
      </div>
      <div
        class="om-react-ui-radio-beta-content"
      >
        <span
          class="om-react-ui-radio-beta-label"
        >
          Test radio
        </span>
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Radio renders disabled state 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="om-react-ui-radio-beta"
      >
        <div
          class="om-react-ui-radio-beta-box-wrapper"
        >
          <div
            class="om-react-ui-radio-beta-box p-radiobutton p-component p-disabled"
            data-p-checked="false"
            data-pc-name="radiobutton"
            data-pc-section="root"
          >
            <input
              class="p-radiobutton-input"
              data-pc-section="input"
              disabled=""
              type="radio"
            />
            <div
              class="p-radiobutton-box"
              data-pc-section="box"
            >
              <div
                class="p-radiobutton-icon"
                data-pc-section="icon"
              />
            </div>
          </div>
        </div>
        <div
          class="om-react-ui-radio-beta-content"
        >
          <span
            class="om-react-ui-radio-beta-label"
          >
            Disabled radio
          </span>
        </div>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="om-react-ui-radio-beta"
    >
      <div
        class="om-react-ui-radio-beta-box-wrapper"
      >
        <div
          class="om-react-ui-radio-beta-box p-radiobutton p-component p-disabled"
          data-p-checked="false"
          data-pc-name="radiobutton"
          data-pc-section="root"
        >
          <input
            class="p-radiobutton-input"
            data-pc-section="input"
            disabled=""
            type="radio"
          />
          <div
            class="p-radiobutton-box"
            data-pc-section="box"
          >
            <div
              class="p-radiobutton-icon"
              data-pc-section="icon"
            />
          </div>
        </div>
      </div>
      <div
        class="om-react-ui-radio-beta-content"
      >
        <span
          class="om-react-ui-radio-beta-label"
        >
          Disabled radio
        </span>
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Radio renders with description 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="om-react-ui-radio-beta"
      >
        <div
          class="om-react-ui-radio-beta-box-wrapper"
        >
          <div
            class="om-react-ui-radio-beta-box p-radiobutton p-component"
            data-p-checked="false"
            data-pc-name="radiobutton"
            data-pc-section="root"
          >
            <input
              class="p-radiobutton-input"
              data-pc-section="input"
              type="radio"
            />
            <div
              class="p-radiobutton-box"
              data-pc-section="box"
            >
              <div
                class="p-radiobutton-icon"
                data-pc-section="icon"
              />
            </div>
          </div>
        </div>
        <div
          class="om-react-ui-radio-beta-content"
        >
          <span
            class="om-react-ui-radio-beta-label"
          >
            Test radio
          </span>
          <span
            class="om-react-ui-radio-beta-description"
          >
            Helper text
          </span>
        </div>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="om-react-ui-radio-beta"
    >
      <div
        class="om-react-ui-radio-beta-box-wrapper"
      >
        <div
          class="om-react-ui-radio-beta-box p-radiobutton p-component"
          data-p-checked="false"
          data-pc-name="radiobutton"
          data-pc-section="root"
        >
          <input
            class="p-radiobutton-input"
            data-pc-section="input"
            type="radio"
          />
          <div
            class="p-radiobutton-box"
            data-pc-section="box"
          >
            <div
              class="p-radiobutton-icon"
              data-pc-section="icon"
            />
          </div>
        </div>
      </div>
      <div
        class="om-react-ui-radio-beta-content"
      >
        <span
          class="om-react-ui-radio-beta-label"
        >
          Test radio
        </span>
        <span
          class="om-react-ui-radio-beta-description"
        >
          Helper text
        </span>
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`RadioGroup renders disabled group 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-radio-group om-react-ui-radio-group-vertical"
        role="radiogroup"
      >
        <label
          class="om-react-ui-radio-beta"
        >
          <div
            class="om-react-ui-radio-beta-box-wrapper"
          >
            <div
              class="om-react-ui-radio-beta-box p-radiobutton p-component p-highlight p-disabled"
              data-p-checked="true"
              data-pc-name="radiobutton"
              data-pc-section="root"
            >
              <input
                checked=""
                class="p-radiobutton-input"
                data-pc-section="input"
                disabled=""
                type="radio"
              />
              <div
                class="p-radiobutton-box"
                data-pc-section="box"
              >
                <div
                  class="p-radiobutton-icon"
                  data-pc-section="icon"
                />
              </div>
            </div>
          </div>
          <div
            class="om-react-ui-radio-beta-content"
          >
            <span
              class="om-react-ui-radio-beta-label"
            >
              Option A
            </span>
          </div>
        </label>
        <label
          class="om-react-ui-radio-beta"
        >
          <div
            class="om-react-ui-radio-beta-box-wrapper"
          >
            <div
              class="om-react-ui-radio-beta-box p-radiobutton p-component p-disabled"
              data-p-checked="false"
              data-pc-name="radiobutton"
              data-pc-section="root"
            >
              <input
                class="p-radiobutton-input"
                data-pc-section="input"
                disabled=""
                type="radio"
              />
              <div
                class="p-radiobutton-box"
                data-pc-section="box"
              >
                <div
                  class="p-radiobutton-icon"
                  data-pc-section="icon"
                />
              </div>
            </div>
          </div>
          <div
            class="om-react-ui-radio-beta-content"
          >
            <span
              class="om-react-ui-radio-beta-label"
            >
              Option B
            </span>
          </div>
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-radio-group om-react-ui-radio-group-vertical"
      role="radiogroup"
    >
      <label
        class="om-react-ui-radio-beta"
      >
        <div
          class="om-react-ui-radio-beta-box-wrapper"
        >
          <div
            class="om-react-ui-radio-beta-box p-radiobutton p-component p-highlight p-disabled"
            data-p-checked="true"
            data-pc-name="radiobutton"
            data-pc-section="root"
          >
            <input
              checked=""
              class="p-radiobutton-input"
              data-pc-section="input"
              disabled=""
              type="radio"
            />
            <div
              class="p-radiobutton-box"
              data-pc-section="box"
            >
              <div
                class="p-radiobutton-icon"
                data-pc-section="icon"
              />
            </div>
          </div>
        </div>
        <div
          class="om-react-ui-radio-beta-content"
        >
          <span
            class="om-react-ui-radio-beta-label"
          >
            Option A
          </span>
        </div>
      </label>
      <label
        class="om-react-ui-radio-beta"
      >
        <div
          class="om-react-ui-radio-beta-box-wrapper"
        >
          <div
            class="om-react-ui-radio-beta-box p-radiobutton p-component p-disabled"
            data-p-checked="false"
            data-pc-name="radiobutton"
            data-pc-section="root"
          >
            <input
              class="p-radiobutton-input"
              data-pc-section="input"
              disabled=""
              type="radio"
            />
            <div
              class="p-radiobutton-box"
              data-pc-section="box"
            >
              <div
                class="p-radiobutton-icon"
                data-pc-section="icon"
              />
            </div>
          </div>
        </div>
        <div
          class="om-react-ui-radio-beta-content"
        >
          <span
            class="om-react-ui-radio-beta-label"
          >
            Option B
          </span>
        </div>
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`RadioGroup renders horizontal layout 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-radio-group om-react-ui-radio-group-horizontal"
        role="radiogroup"
      >
        <label
          class="om-react-ui-radio-beta"
        >
          <div
            class="om-react-ui-radio-beta-box-wrapper"
          >
            <div
              class="om-react-ui-radio-beta-box p-radiobutton p-component p-highlight"
              data-p-checked="true"
              data-pc-name="radiobutton"
              data-pc-section="root"
            >
              <input
                checked=""
                class="p-radiobutton-input"
                data-pc-section="input"
                type="radio"
              />
              <div
                class="p-radiobutton-box"
                data-pc-section="box"
              >
                <div
                  class="p-radiobutton-icon"
                  data-pc-section="icon"
                />
              </div>
            </div>
          </div>
          <div
            class="om-react-ui-radio-beta-content"
          >
            <span
              class="om-react-ui-radio-beta-label"
            >
              Option A
            </span>
          </div>
        </label>
        <label
          class="om-react-ui-radio-beta"
        >
          <div
            class="om-react-ui-radio-beta-box-wrapper"
          >
            <div
              class="om-react-ui-radio-beta-box p-radiobutton p-component"
              data-p-checked="false"
              data-pc-name="radiobutton"
              data-pc-section="root"
            >
              <input
                class="p-radiobutton-input"
                data-pc-section="input"
                type="radio"
              />
              <div
                class="p-radiobutton-box"
                data-pc-section="box"
              >
                <div
                  class="p-radiobutton-icon"
                  data-pc-section="icon"
                />
              </div>
            </div>
          </div>
          <div
            class="om-react-ui-radio-beta-content"
          >
            <span
              class="om-react-ui-radio-beta-label"
            >
              Option B
            </span>
          </div>
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-radio-group om-react-ui-radio-group-horizontal"
      role="radiogroup"
    >
      <label
        class="om-react-ui-radio-beta"
      >
        <div
          class="om-react-ui-radio-beta-box-wrapper"
        >
          <div
            class="om-react-ui-radio-beta-box p-radiobutton p-component p-highlight"
            data-p-checked="true"
            data-pc-name="radiobutton"
            data-pc-section="root"
          >
            <input
              checked=""
              class="p-radiobutton-input"
              data-pc-section="input"
              type="radio"
            />
            <div
              class="p-radiobutton-box"
              data-pc-section="box"
            >
              <div
                class="p-radiobutton-icon"
                data-pc-section="icon"
              />
            </div>
          </div>
        </div>
        <div
          class="om-react-ui-radio-beta-content"
        >
          <span
            class="om-react-ui-radio-beta-label"
          >
            Option A
          </span>
        </div>
      </label>
      <label
        class="om-react-ui-radio-beta"
      >
        <div
          class="om-react-ui-radio-beta-box-wrapper"
        >
          <div
            class="om-react-ui-radio-beta-box p-radiobutton p-component"
            data-p-checked="false"
            data-pc-name="radiobutton"
            data-pc-section="root"
          >
            <input
              class="p-radiobutton-input"
              data-pc-section="input"
              type="radio"
            />
            <div
              class="p-radiobutton-box"
              data-pc-section="box"
            >
              <div
                class="p-radiobutton-icon"
                data-pc-section="icon"
              />
            </div>
          </div>
        </div>
        <div
          class="om-react-ui-radio-beta-content"
        >
          <span
            class="om-react-ui-radio-beta-label"
          >
            Option B
          </span>
        </div>
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`RadioGroup renders with children 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-radio-group om-react-ui-radio-group-vertical"
        role="radiogroup"
      >
        <label
          class="om-react-ui-radio-beta"
        >
          <div
            class="om-react-ui-radio-beta-box-wrapper"
          >
            <div
              class="om-react-ui-radio-beta-box p-radiobutton p-component p-highlight"
              data-p-checked="true"
              data-pc-name="radiobutton"
              data-pc-section="root"
            >
              <input
                checked=""
                class="p-radiobutton-input"
                data-pc-section="input"
                type="radio"
              />
              <div
                class="p-radiobutton-box"
                data-pc-section="box"
              >
                <div
                  class="p-radiobutton-icon"
                  data-pc-section="icon"
                />
              </div>
            </div>
          </div>
          <div
            class="om-react-ui-radio-beta-content"
          >
            <span
              class="om-react-ui-radio-beta-label"
            >
              Option A
            </span>
          </div>
        </label>
        <label
          class="om-react-ui-radio-beta"
        >
          <div
            class="om-react-ui-radio-beta-box-wrapper"
          >
            <div
              class="om-react-ui-radio-beta-box p-radiobutton p-component"
              data-p-checked="false"
              data-pc-name="radiobutton"
              data-pc-section="root"
            >
              <input
                class="p-radiobutton-input"
                data-pc-section="input"
                type="radio"
              />
              <div
                class="p-radiobutton-box"
                data-pc-section="box"
              >
                <div
                  class="p-radiobutton-icon"
                  data-pc-section="icon"
                />
              </div>
            </div>
          </div>
          <div
            class="om-react-ui-radio-beta-content"
          >
            <span
              class="om-react-ui-radio-beta-label"
            >
              Option B
            </span>
          </div>
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-radio-group om-react-ui-radio-group-vertical"
      role="radiogroup"
    >
      <label
        class="om-react-ui-radio-beta"
      >
        <div
          class="om-react-ui-radio-beta-box-wrapper"
        >
          <div
            class="om-react-ui-radio-beta-box p-radiobutton p-component p-highlight"
            data-p-checked="true"
            data-pc-name="radiobutton"
            data-pc-section="root"
          >
            <input
              checked=""
              class="p-radiobutton-input"
              data-pc-section="input"
              type="radio"
            />
            <div
              class="p-radiobutton-box"
              data-pc-section="box"
            >
              <div
                class="p-radiobutton-icon"
                data-pc-section="icon"
              />
            </div>
          </div>
        </div>
        <div
          class="om-react-ui-radio-beta-content"
        >
          <span
            class="om-react-ui-radio-beta-label"
          >
            Option A
          </span>
        </div>
      </label>
      <label
        class="om-react-ui-radio-beta"
      >
        <div
          class="om-react-ui-radio-beta-box-wrapper"
        >
          <div
            class="om-react-ui-radio-beta-box p-radiobutton p-component"
            data-p-checked="false"
            data-pc-name="radiobutton"
            data-pc-section="root"
          >
            <input
              class="p-radiobutton-input"
              data-pc-section="input"
              type="radio"
            />
            <div
              class="p-radiobutton-box"
              data-pc-section="box"
            >
              <div
                class="p-radiobutton-icon"
                data-pc-section="icon"
              />
            </div>
          </div>
        </div>
        <div
          class="om-react-ui-radio-beta-content"
        >
          <span
            class="om-react-ui-radio-beta-label"
          >
            Option B
          </span>
        </div>
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`RadioGroup renders with options 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-radio-group om-react-ui-radio-group-vertical"
        role="radiogroup"
      >
        <label
          class="om-react-ui-radio-beta"
        >
          <div
            class="om-react-ui-radio-beta-box-wrapper"
          >
            <div
              class="om-react-ui-radio-beta-box p-radiobutton p-component p-highlight"
              data-p-checked="true"
              data-pc-name="radiobutton"
              data-pc-section="root"
            >
              <input
                checked=""
                class="p-radiobutton-input"
                data-pc-section="input"
                type="radio"
              />
              <div
                class="p-radiobutton-box"
                data-pc-section="box"
              >
                <div
                  class="p-radiobutton-icon"
                  data-pc-section="icon"
                />
              </div>
            </div>
          </div>
          <div
            class="om-react-ui-radio-beta-content"
          >
            <span
              class="om-react-ui-radio-beta-label"
            >
              Email
            </span>
          </div>
        </label>
        <label
          class="om-react-ui-radio-beta"
        >
          <div
            class="om-react-ui-radio-beta-box-wrapper"
          >
            <div
              class="om-react-ui-radio-beta-box p-radiobutton p-component"
              data-p-checked="false"
              data-pc-name="radiobutton"
              data-pc-section="root"
            >
              <input
                class="p-radiobutton-input"
                data-pc-section="input"
                type="radio"
              />
              <div
                class="p-radiobutton-box"
                data-pc-section="box"
              >
                <div
                  class="p-radiobutton-icon"
                  data-pc-section="icon"
                />
              </div>
            </div>
          </div>
          <div
            class="om-react-ui-radio-beta-content"
          >
            <span
              class="om-react-ui-radio-beta-label"
            >
              SMS
            </span>
          </div>
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-radio-group om-react-ui-radio-group-vertical"
      role="radiogroup"
    >
      <label
        class="om-react-ui-radio-beta"
      >
        <div
          class="om-react-ui-radio-beta-box-wrapper"
        >
          <div
            class="om-react-ui-radio-beta-box p-radiobutton p-component p-highlight"
            data-p-checked="true"
            data-pc-name="radiobutton"
            data-pc-section="root"
          >
            <input
              checked=""
              class="p-radiobutton-input"
              data-pc-section="input"
              type="radio"
            />
            <div
              class="p-radiobutton-box"
              data-pc-section="box"
            >
              <div
                class="p-radiobutton-icon"
                data-pc-section="icon"
              />
            </div>
          </div>
        </div>
        <div
          class="om-react-ui-radio-beta-content"
        >
          <span
            class="om-react-ui-radio-beta-label"
          >
            Email
          </span>
        </div>
      </label>
      <label
        class="om-react-ui-radio-beta"
      >
        <div
          class="om-react-ui-radio-beta-box-wrapper"
        >
          <div
            class="om-react-ui-radio-beta-box p-radiobutton p-component"
            data-p-checked="false"
            data-pc-name="radiobutton"
            data-pc-section="root"
          >
            <input
              class="p-radiobutton-input"
              data-pc-section="input"
              type="radio"
            />
            <div
              class="p-radiobutton-box"
              data-pc-section="box"
            >
              <div
                class="p-radiobutton-icon"
                data-pc-section="icon"
              />
            </div>
          </div>
        </div>
        <div
          class="om-react-ui-radio-beta-content"
        >
          <span
            class="om-react-ui-radio-beta-label"
          >
            SMS
          </span>
        </div>
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
